# ChangeLog for net-p2p/ktorrent
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.127 2009/08/12 23:34:17 wired Exp $

*ktorrent-3.3_beta1 (12 Aug 2009)

  12 Aug 2009; Alex Alexander <wired@gentoo.org> +ktorrent-3.3_beta1.ebuild,
  metadata.xml:
  added 3.3 beta1

*ktorrent-3.2.3 (12 Aug 2009)

  12 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -ktorrent-3.2.2.ebuild, +ktorrent-3.2.3.ebuild:
  Version bump. Remove old. Last version from 3.2 series.

  26 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  ktorrent-3.2.2.ebuild:
  Depend on krosspython only when kross use enabled.

  24 Jul 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  ktorrent-3.2.2.ebuild:
  Rdepend on krosspython. Per bug #277105

  09 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  ktorrent-3.2.2.ebuild:
  Slotchange from 3 to 4

*ktorrent-3.2.2 (02 Jun 2009)

  02 Jun 2009; Tomas Chvatal <scarabeus@gentoo.org> -ktorrent-2.2.8.ebuild,
  -ktorrent-2.2.8-r1.ebuild, -ktorrent-3.2.1-r1.ebuild,
  +ktorrent-3.2.2.ebuild:
  Version bump. Remove old.

  01 Jun 2009; nixnut <nixnut@gentoo.org> ktorrent-2.2.8-r2.ebuild:
  ppc stable #270070

  31 May 2009; Brent Baude <ranger@gentoo.org> ktorrent-2.2.8-r2.ebuild:
  Marking ktorrent-2.2.8-r2 ppc64 for bug 270070

  24 May 2009; Markus Meier <maekke@gentoo.org> ktorrent-2.2.8-r2.ebuild:
  x86 stable, bug #270070

  24 May 2009; Tiago Cunha <tcunha@gentoo.org> ktorrent-2.2.8-r2.ebuild:
  stable sparc, bug 270070

  23 May 2009; Dawid Węgliński <cla@gentoo.org> ktorrent-2.2.8-r2.ebuild:
  Stable on amd64 (bug #270070)

*ktorrent-2.2.8-r2 (23 May 2009)

  23 May 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +ktorrent-2.2.8-r2.ebuild:
  revision bump to the kde3 version, change slot and cleanup

*ktorrent-3.2.1-r1 (17 May 2009)
*ktorrent-2.2.8-r1 (17 May 2009)

  17 May 2009; Tomas Chvatal <scarabeus@gentoo.org>
  +ktorrent-2.2.8-r1.ebuild, -ktorrent-3.2.1.ebuild,