@@ -5,6 +5,6 @@ DIST ktorrent-3.2.3.tar.bz2 2676824 RMD160 1d641551d966d8365dd1defc26c72eb36d350
 DIST ktorrent-3.3beta1.tar.bz2 2327703 RMD160 48a5d8507955348b417302b836f1a747faa61b7d SHA1 1aee0317582d9b6a77bed081e2079a2f06e8c058 SHA256 d65db6a1bd0e64dba7184eebec8eec99c38a227782cff149fab7794b597030b2
 EBUILD ktorrent-2.2.8-r2.ebuild 1333 RMD160 234be5ad6fd7dc6fd81165d57403c616d1f785d5 SHA1 fef41ae07020bf849c3d455cb95f8e422d2a0eb6 SHA256 251ee6e80823bb2a7bc42701fa1c91eeb77460df6607bde5a19090d462834e71
 EBUILD ktorrent-3.2.3.ebuild 2289 RMD160 5bdede992eff402e603dd41d5ac6be6da121e3b3 SHA1 50e9148884fb77085972fe822f110f020aac0ab8 SHA256 b1e55226b18104101b39348942e457d35fb5d7a98cf33f04b48533f73777c150
-EBUILD ktorrent-3.3_beta1.ebuild 2669 RMD160 81f9791b4a545f1ad6d660e9a38d6b4256c15a93 SHA1 0db61d5d80561d18908ce1fc6c4780eee6a9eba5 SHA256 278d7695ed00f3091fbef1617edf828240bbed8807c42e53d78db9b1fcab9616
-MISC ChangeLog 19338 RMD160 e1ade1852bc2d13f05095b5e94cbf17448610f99 SHA1 e03c2bb6eb3787a2fad1f212d62ce6700a543216 SHA256 677d56f8359b94a18801cb7920643ea1ce7347a9bf3b128e5fe276e6fffe1ade
+EBUILD ktorrent-3.3_beta1.ebuild 2632 RMD160 da337a6f8d34d8a9c255349d8925695c5c7c9c9d SHA1 29b2a6ddde9a7a6894249acbf0f19d605639c579 SHA256 9a7c37446b874611c8e895c9f17e1ebaecdfbd64d9f2069003b8cd1713ea0591
+MISC ChangeLog 19456 RMD160 51dc126a38614e0753ad03cbc59fd86687f6c869 SHA1 23df59af1c31f9285d34a21c78e7e2f51f573956 SHA256 f529416eba9682b7a91de4c033153badeecaec8aad167f40d3fff50723f42538
 MISC metadata.xml 1152 RMD160 34f0a04734b39b0561e8b5294c3a0c36fb60a042 SHA1 f1a0e2f39b1f57b8eac633cf5e0c35686e5619f9 SHA256 aa7e9b14654d453d4521f370bce6d19cefd9933922bbba1eb2bcb9cc97c25182
