@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/ktorrent
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.127 2009/08/12 23:34:17 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ktorrent/ChangeLog,v 1.128 2009/08/13 07:53:51 wired Exp $
+
+  13 Aug 2009; Alex Alexander <wired@gentoo.org> ktorrent-3.3_beta1.ebuild:
+  removed block, improved live detection
 
 *ktorrent-3.3_beta1 (12 Aug 2009)
 
